all_manpages := libweb100.3 \
                web100_attach.3 \
                web100_detach.3 \
                web100_group_find.3 \
                web100_group_head.3 \
                web100_group_next.3 \
                web100_perror.3 \
                web100_strerror.3

man_MANS += $(all_manpages)
EXTRA_DIST += $(all_manpages)
